[package]
name = "bakul"
version = "0.1.0"
authors = ["anak10thn <anak10thn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duma = "0.1.0"
clap = "2.33.0"
failure = "0.1.6"
flate2 = "1.0.12"
tar = "0.4.26"